--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         const heartsContainer = document.getElementById('hearts');
 
         yesBtn.addEventListener('click', () => {
-            message.textContent = "Yay! ❤️ You're my Valentine! 💕";
+            message.textContent = "JEJJ! ❤️ SAD SI MOJ VALENTAJN! 💕";
             message.style.display = 'block';
             document.querySelector('.buttons').style.display = 'none';
             // Add floating hearts
@@ -124,3 +124,4 @@
     </script>
 </body>
 </html>
+
